--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
+        "localforage": "^1.7.3",
         "npm": "^6.7.0",
         "vue-router": "^3.0.2",
         "vuex": "^3.1.0"
